--- a/IAMultiAgent/IAMultiAgent/MainWindow.xaml
+++ b/IAMultiAgent/IAMultiAgent/MainWindow.xaml
@@ -1,9 +1,12 @@
 ﻿<Window x:Class="IAMultiAgent.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="476.8" Width="885.6">
+        Title="CarreFour" Height="476.8" Width="885.6">
     <Grid>
-        <Canvas Name="carrefourCanvas" HorizontalAlignment="Left" Height="480" Margin="0,0,0,0" VerticalAlignment="Top" Width="640"/>
+        <Canvas Name="carrefourCanvas"  Background="Black" HorizontalAlignment="Left" Height="480" Margin="0,0,0,0" VerticalAlignment="Top" Width="640">
+            
+            
+        </Canvas>
 
     </Grid>
 </Window>
