--- a/IAMultiAgent/IAMultiAgent/MainWindow.xaml
+++ b/IAMultiAgent/IAMultiAgent/MainWindow.xaml
@@ -7,6 +7,8 @@
             
             
         </Canvas>
+        <Label x:Name="lbNbVoiture" Content="Nombre de vehicule : " HorizontalAlignment="Left" Margin="653,10,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="tbNbVehicule" HorizontalAlignment="Left" Height="23" Margin="653,41,0,0" TextWrapping="Wrap" Text="Nombre vehicule" VerticalAlignment="Top" Width="174" TouchEnter="tbNbVehicule_TouchEnter" KeyDown="tbNbVehicule_KeyDown"/>
 
     </Grid>
 </Window>
