--- a/IAMultiAgent/IAMultiAgent/MainWindow.xaml
+++ b/IAMultiAgent/IAMultiAgent/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="IAMultiAgent.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="CarreFour" Height="476.8" Width="885.6">
+        Title="CarreFour" Height="476.8" Width="885.6" Background="#ffa2a2">
     <Grid Name="test">
         <Canvas Name="carrefourCanvas" HorizontalAlignment="Left" Height="480" Margin="0,0,245,0" VerticalAlignment="Top" Width="640" MaxWidth="640">
            
@@ -24,8 +24,12 @@
         <Label x:Name="lbNombreDeCamionInt" Content="" HorizontalAlignment="Left" Margin="770,270,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lbNbTotalVehiculetxt" Content="Nombre total de vehicule : " HorizontalAlignment="Left" Margin="653,290,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lbNombrTotaleDeVehiculeInt" Content="" HorizontalAlignment="Left" Margin="800,290,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="label_Copy" Content="Vitesse :" HorizontalAlignment="Left" Margin="653,316,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lbVitesseVehicule" Content="" HorizontalAlignment="Left" Margin="722,321,0,0" VerticalAlignment="Top" Width="67"/>
+        <Label x:Name="lbEtatCarrefour" Content="Radio Traffic :" HorizontalAlignment="Left" Margin="640,327,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+        <Label x:Name="lbVoieBas" Content="Voie du bas :" HorizontalAlignment="Left" Margin="640,350,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lbVoieBasEtat" Content="" HorizontalAlignment="Left" Margin="717,350,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lbVoieGauche" Content="Voie de gauche :" HorizontalAlignment="Left" Margin="640,370,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lbVoieGaucheEtat" Content="" HorizontalAlignment="Left" Margin="717,370,0,0" VerticalAlignment="Top"/>
+        
         <TextBox x:Name="tbNbVehicule_2" HorizontalAlignment="Left" Height="23" Margin="749,52,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="80"  KeyDown="tbNbVehicule_KeyDown"/>
         <Rectangle Fill="#808080" HorizontalAlignment="Left" Height="24" Margin="355,270,0,0" Stroke="Black" VerticalAlignment="Top" Width="12"/>
         <Ellipse Fill="#ff0000" HorizontalAlignment="Left" Height="6" Margin="361,274,0,0" Stroke="Black" VerticalAlignment="Top" Width="6" Name="rougeFeuFace" Visibility="Hidden"/>
