--- a/IAMultiAgent/IAMultiAgent/MainWindow.xaml
+++ b/IAMultiAgent/IAMultiAgent/MainWindow.xaml
@@ -3,37 +3,43 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="CarreFour" Height="476.8" Width="885.6" Background="#ffa2a2">
     <Grid Name="test">
-        <Canvas Name="carrefourCanvas" HorizontalAlignment="Left" Height="480" Margin="0,0,245,0" VerticalAlignment="Top" Width="640" MaxWidth="640">
-           
-        </Canvas>
-        <Label x:Name="lbNbVoiture" Content="Nombre de vehicule : " HorizontalAlignment="Left" Margin="653,21,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="tbNbVehicule" HorizontalAlignment="Left" Height="23" Margin="653,52,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="80"  KeyDown="tbNbVehicule_KeyDown"/>
-        <Label x:Name="lbTempsFeuVert" Content="Temps feu vert : " HorizontalAlignment="Left" Margin="653,75,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="tbTempsFeuVert" HorizontalAlignment="Left" Height="23" Margin="653,106,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="174"  KeyDown="tbTempFeuVert_KeyDown_1"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="686*"/>
+            <ColumnDefinition Width="193*"/>
+        </Grid.ColumnDefinitions>
+        <Canvas Name="carrefourCanvas" HorizontalAlignment="Left" Height="480" Margin="0,0,0,-32.8" VerticalAlignment="Top" Width="640" MaxWidth="640">
 
-        <Label x:Name="lbTempsFeuRouge" Content="Temps feu rouge : " HorizontalAlignment="Left" Margin="653,129,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="tbTempsFeuRouge" HorizontalAlignment="Left" Height="23" Margin="653,160,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="174"  KeyDown="tbTempFeuRouge_KeyDown_1"/>
-        <Label x:Name="lbInfo" Content="Information sur la simulation" HorizontalAlignment="Left" Margin="653,183,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="label" Content="Feu en face : " HorizontalAlignment="Left" Margin="653,214,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lbEtatFeuDevannt" Content=" " HorizontalAlignment="Left" Margin="735,214,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lbFeuGauche" Content="Feu à  gauche : " HorizontalAlignment="Left" Margin="653,230,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lbEtatFeuGauche" Content="" HorizontalAlignment="Left" Margin="735,230,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lbNbVoituretxt" Content="Nombre de voiture : " HorizontalAlignment="Left" Margin="653,250,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lbNombreDeVoitureInt" Content="" HorizontalAlignment="Left" Margin="770,250,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lbNbCamio4txt" Content="Nombre de camion : " HorizontalAlignment="Left" Margin="653,270,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lbNombreDeCamionInt" Content="" HorizontalAlignment="Left" Margin="770,270,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lbNbTotalVehiculetxt" Content="Nombre total de vehicule : " HorizontalAlignment="Left" Margin="653,290,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lbNombrTotaleDeVehiculeInt" Content="" HorizontalAlignment="Left" Margin="800,290,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lbEtatCarrefour" Content="Radio Traffic :" HorizontalAlignment="Left" Margin="640,327,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
-        <Label x:Name="lbVoieBas" Content="Voie du bas :" HorizontalAlignment="Left" Margin="640,350,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lbVoieBasEtat" Content="" HorizontalAlignment="Left" Margin="717,350,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lbVoieGauche" Content="Voie de gauche :" HorizontalAlignment="Left" Margin="640,370,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lbVoieGaucheEtat" Content="" HorizontalAlignment="Left" Margin="717,370,0,0" VerticalAlignment="Top"/>
-        
-        <TextBox x:Name="tbNbVehicule_2" HorizontalAlignment="Left" Height="23" Margin="749,52,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="80"  KeyDown="tbNbVehicule_KeyDown"/>
+        </Canvas>
+        <Label x:Name="lbNbVoiture" Content="Nombre de vehicule : " HorizontalAlignment="Left" Margin="653,21,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <TextBox x:Name="tbNbVehicule" HorizontalAlignment="Left" Height="23" Margin="653,52,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="80"  KeyDown="tbNbVehicule_KeyDown" Grid.ColumnSpan="2"/>
+        <Label x:Name="lbTempsFeuVert" Content="Temps feu vert : " HorizontalAlignment="Left" Margin="653,75,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <TextBox x:Name="tbTempsFeuVert" HorizontalAlignment="Left" Height="23" Margin="653,106,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="174"  KeyDown="tbTempFeuVert_KeyDown_1" Grid.ColumnSpan="2"/>
+
+        <Label x:Name="lbTempsFeuRouge" Content="Temps feu rouge : " HorizontalAlignment="Left" Margin="653,129,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <TextBox x:Name="tbTempsFeuRouge" HorizontalAlignment="Left" Height="23" Margin="653,160,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="174"  KeyDown="tbTempFeuRouge_KeyDown_1" Grid.ColumnSpan="2"/>
+        <Label x:Name="lbInfo" Content="Information sur la simulation" HorizontalAlignment="Left" Margin="653,183,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <Label x:Name="label" Content="Feu en face : " HorizontalAlignment="Left" Margin="653,214,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <Label x:Name="lbEtatFeuDevannt" Content=" " HorizontalAlignment="Left" Margin="48.6,214,0,0" VerticalAlignment="Top" Grid.Column="1"/>
+        <Label x:Name="lbFeuGauche" Content="Feu à  gauche : " HorizontalAlignment="Left" Margin="653,230,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <Label x:Name="lbEtatFeuGauche" Content="" HorizontalAlignment="Left" Margin="48.6,230,0,0" VerticalAlignment="Top" Grid.Column="1"/>
+        <Label x:Name="lbNbVoituretxt" Content="Nombre de voiture : " HorizontalAlignment="Left" Margin="653,250,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <Label x:Name="lbNombreDeVoitureInt" Content="" HorizontalAlignment="Left" Margin="83.6,250,0,0" VerticalAlignment="Top" Grid.Column="1"/>
+        <Label x:Name="lbNbCamio4txt" Content="Nombre de camion : " HorizontalAlignment="Left" Margin="653,270,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <Label x:Name="lbNombreDeCamionInt" Content="" HorizontalAlignment="Left" Margin="83.6,270,0,0" VerticalAlignment="Top" Grid.Column="1"/>
+        <Label x:Name="lbNbTotalVehiculetxt" Content="Nombre total de vehicule : " HorizontalAlignment="Left" Margin="653,290,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <Label x:Name="lbNombrTotaleDeVehiculeInt" Content="" HorizontalAlignment="Left" Margin="113.6,290,0,0" VerticalAlignment="Top" Grid.Column="1"/>
+        <Label x:Name="lbEtatCarrefour" Content="Radio Traffic :" HorizontalAlignment="Left" Margin="640,327,0,0" VerticalAlignment="Top" FontWeight="Bold" Grid.ColumnSpan="2"/>
+        <Label x:Name="lbVoieBas" Content="Voie du bas :" HorizontalAlignment="Left" Margin="640,350,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <Label x:Name="lbVoieBasEtat" Content="" HorizontalAlignment="Left" Margin="30.6,350,0,0" VerticalAlignment="Top" Grid.Column="1"/>
+        <Label x:Name="lbVoieGauche" Content="Voie de gauche :" HorizontalAlignment="Left" Margin="640,370,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <Label x:Name="lbVoieGaucheEtat" Content="" HorizontalAlignment="Left" Margin="30.6,370,0,0" VerticalAlignment="Top" Grid.Column="1"/>
+
+        <TextBox x:Name="tbNbVehicule_2" HorizontalAlignment="Left" Height="23" Margin="62.6,52,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="80"  KeyDown="tbNbVehicule_KeyDown" Grid.Column="1"/>
         <Rectangle Fill="#808080" HorizontalAlignment="Left" Height="24" Margin="355,270,0,0" Stroke="Black" VerticalAlignment="Top" Width="12"/>
         <Ellipse Fill="#ff0000" HorizontalAlignment="Left" Height="6" Margin="361,274,0,0" Stroke="Black" VerticalAlignment="Top" Width="6" Name="rougeFeuFace" Visibility="Hidden"/>
         <Ellipse Fill="LightGreen" HorizontalAlignment="Left" Height="6" Margin="361,285,0,0" Stroke="Black" Name="vertFeuFace" VerticalAlignment="Top" Width="6"/>
+        <Label x:Name="label1" Content="En bas :" HorizontalAlignment="Left" Margin="645,39,0,0" VerticalAlignment="Top" FontSize="8"/>
+        <Label x:Name="label2" Content="A droite :" HorizontalAlignment="Left" Margin="51.6,39,0,0" VerticalAlignment="Top" FontSize="8" Grid.Column="1"/>
 
     </Grid>
 </Window>
